[package]
name = "sql_mongo_convert"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlparser = "0.33.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mongodb]
version = "2.4.0"
default-features = false
features = ["tokio-runtime"]
